@@ -15,6 +15,8 @@
 	  foo Int1 ::= 30) and values of raw INTEGERs. The definitions of these
 	  values are not yet emitted; "TODO: implement" comments appear in the
 	  corresponding source files.
+	* Prevented emission of ModuleName sources for ASN.1 values when the modules
+	  are standard modules (marked internally with MT_STANDARD_MODULE).
 
 0.9.24: 2010-Dec-04
 
